[package]
name = "poek"
version = "0.1.0"
authors = ["Kristoffer Søholm <k.soeholm@gmail.com>", "Mathias Svensson <freaken@freaken.dk>"]

[[bin]]
name = "peek"
path = "src/bin/peek.rs"

[[bin]]
name = "poke"
path = "src/bin/poke.rs"

[dependencies]
mio = "0.5"
bytes = "0.3.0"
rust-crypto = "^0.2"
byteorder = "^0.4.2"
rand = "^0.3.13"
